--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,20 @@
     <string name="app_name">Drizzle</string>
     <string name="drizzle_app">Drizzle app</string>
     <string name="current_groups">Current Groups</string>
+    <string name="title_activity_main">MainActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="postal_code">Postal code for you current place:</string>
+    <string name="minor">Minor:</string>
+    <string name="school">School:</string>
+    <string name="major">Major:</string>
+    <string name="name">Name:</string>
+    <string name="gender">Gender:</string>
+    <string name="submit">Submit</string>
 </resources>
