--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="name">Name:</string>
     <string name="gender">Gender:</string>
     <string name="submit">Submit</string>
+    <string name="study_topic">Study topic:</string>
+    <string name="group_name">Group name:</string>
+    <string name="group_size">Group size:</string>
 </resources>
