--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="first">First Fragment</string>
     <string name="second">second Fragment</string>
     <string name="third">third Fragment</string>
+    <string name="not_currently_searching">Not currently searching.</string>
+    <string name="find_my_group">Find My Group</string>
+    <string name="welcome_name">Welcome name</string>
+    <string name="home">Home</string>
 
     <string-array name="group_titles">
         <item>Group 1</item>
