--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="study_topic">Study topic:</string>
     <string name="group_name">Group name:</string>
     <string name="group_size">Group size:</string>
+    <string name="button">Button</string>
 </resources>
