--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,11 @@
     <string name="not_currently_searching">Not currently searching.</string>
     <string name="find_my_group">Find My Group</string>
     <string name="welcome_name">Welcome, Name!</string>
-    <string name="home">Home</string>
-    <string name="searching_button_line">Searching for your perfect study group...</string>
+    <string name="home">Drizzle</string>
+    <string name="searching_button_line">Searching for your perfect study group... Press to cancel.</string>
     <string name="not_searching_button_line">Not currently searching.</string>
+    <string name="subject_to_study">Subject to Study:</string>
+    <string name="group_size">Group Size:</string>
 
     <string-array name="group_titles">
         <item>Group 1</item>
@@ -59,7 +61,4 @@
         <item>Second 8</item>
         <item>Second 9</item>
     </string-array>
-
-
-
 </resources>
