--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="not_searching_button_line">Not currently searching.</string>
     <string name="subject_to_study">Subject to Study:</string>
     <string name="group_size">Group Size:</string>
+    <string name="log_out">Log Out</string>
 
     <string-array name="group_titles">
         <item>Group 1</item>
