Made sure all texts are in resource file and added spanish locale to translate text to spanish

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,16 @@
     <string name="subject_to_study">Subject to Study:</string>
     <string name="group_size">Group Size:</string>
     <string name="log_out">Log Out</string>
+    <string name="lang">Change Language</string>
+    <string name="verify">Verify Code</string>
+    <string name="SignIn">Sign In / Register</string>
+    <string name="EnterPhone">Please Input A Phone Number to login</string>
+    <string name="FindGroup">Find Groups</string>
+    <string name="group">Groups</string>
+    <string name="AddGroups">Add Group</string>
+    <string name="Refresh">Refresh</string>
+    <string name="Friends">Friends</string>
+    <string name="addFriends">Add Friends</string>
 
     <string-array name="group_titles">
         <item>Group 1</item>
