--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="group_name">Group name:</string>
     <string name="group_size">Group size:</string>
     <string name="button">Button</string>
+    <string name="back">Back</string>
 </resources>
